--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "pandachain",
   "version": "1.0.0",
   "description": "学习区块链Demo",
-  "main": "index.js",
+  "main": "helloworld.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/caiweiw/PandaChain/issues"
   },
-  "homepage": "https://github.com/caiweiw/PandaChain#readme"
+  "homepage": "https://github.com/caiweiw/PandaChain#readme",
+  "dependencies": {
+    "@types/node": "^10.12.18"
+  }
 }
