--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   },
   "homepage": "https://github.com/caiweiw/PandaChain#readme",
   "dependencies": {
-    "@types/node": "^10.12.18"
+    "@types/express": "^4.16.0",
+    "@types/node": "^10.12.18",
+    "express": "^4.16.4"
   }
 }
